fix: z-index was too heigh on image count

--- a/src/app/images/page.module.scss
+++ b/src/app/images/page.module.scss
@@ -39,7 +39,7 @@ $collection-size: 250px;
                 background-color: ohma.$colors-black;
                 border-radius: 0 0 0 1em;
                 min-width: 30px;
-                z-index: 2;
+                z-index: 1;
                 text-align: center;
             }
             &::after {
